[package]
name = "pwmp-msg-size-comparisons"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
rmp-serde = "1.3.1"
pwmp-msg = { git = "ssh://git@github.com/PixelWeatherProject/pwmp-msg.git" }
serde = { version = "1.0.228", features = ["derive"] }
